2010-04-29  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Handle "*" wildcard matches in package and subsystem version strings.

	* src/vercmp.h (pkgVersionInfo::version_string): New private member
	variable; it stores a pointer to a dynamically allocated local copy of
	the invariant `version' argument, to facilitate correct parsing.
	(pkgVersionInfo::build_string): Likewise; it provides similar handling
	for the invariant `build' argument.
	(pkgVersionInfo::Free): New private inline method; it provides a NULL
	pointer safe wrapper, calling the C library `free()' function, (since
	some implementations are believed to be unsafe); it is used by...
	(pkgVersionInfo::~pkgVersionInfo): ...this new inline destructor, to
	release the memory allocated by the constructor, for `version_string'
	and `build_string'.

	* src/vercmp.cpp (pkgVersionInfo::pkgVersionInfo): Allocate memory for
	`version_string' and `build_string', as required; populate it.
	Explicitly handle "*" as a `match anything' wildcard...
	(pkgVersionInfo::Compare): ...matching it as `equal' to everything.

2010-04-18  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Correct omission from configure script prerequisite checks.

	* aclocal.m4 (MINGW_AC_OUTPUT): New macro; it wraps AC_OUTPUT itself,
	adding a trap to force an abort if any preceding prerequisite check
	was handled by MINGW_AC_ASSERT_MISSING.

	* configure.ac: Qualify package component types, in prerequisite
	checks handled by MINGW_AC_ASSERT_MISSING; invoke MINGW_AC_OUTPUT
	in place of AC_OUTPUT.

2010-04-17  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add configure script checks for prerequisite library headers.
	(Thanks to Cesar Strauss for proposing a rudimentary implementation).

	* aclocal.m4: New file; it does no more than include...
	* m4/missing.m4: ...this; new file incorporated from build-aux module.

	* configure.ac: Add AC_CHECK_HEADER assertions for...