@@ -1,3 +1,12 @@
+2010-04-30  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Revert 2010-04-04 refactoring of tarproc.cpp and tarinst.cpp
+
+	* src/tarinst.cpp: File removed; its content merged into...
+	* src/tarproc.cpp: ...this; it cannot be cleanly separated out.
+
+	* Makefile.in (tarinst.$OBJEXT): Remove reference.
+
 2010-04-29  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Handle "*" wildcard matches in package and subsystem version strings.
